# quotes-rust

./: Cargo.toml  README.md  justfile
migrations/: 20231222181528_initial_database_setup.sql
src/: main.rs
src/handlers/: health.rs  mod.rs  quotes.rs
